--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-    
-    <h1></h1>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-    <script src="app.js"> </script>
-</body>
+  <body>
+    <h1>BMI Calculator</h1>
+    <div class="text">
+      <div class="find-name">
+        <label for="name-box">Name:</label>
+        <input
+          type="text"
+          id="name-box"
+          name="name-box"
+          placeholder="Enter Your Name"
+        />
+        //** find out what name and id difference is 
+      </div>
+
+      <div class="find-age">
+        <label for="age-box">Age:</label>
+        <input
+          type="text"
+          id="age-box"
+          name="Age"
+          placeholder="Enter Your Age"
+        />
+      </div>
+      >
+
+      <p class="results">Here are your results:</p>
+    </div>
+
+    <script src="app.js"></script>
+  </body>
 </html>
