--- a/index.html
+++ b/index.html
@@ -15,32 +15,8 @@
 
   <body>
     <h1>BMI Calculator</h1>
-    <div class="text">
-      <div class="find-name">
-        <label for="name-box">Name:</label>
-        <input
-          type="text"
-          id="name-box"
-          name="name-box"
-          placeholder="Enter Your Name"
-        />
-        //** find out what name and id difference is 
-      </div>
-
-      <div class="find-age">
-        <label for="age-box">Age:</label>
-        <input
-          type="text"
-          id="age-box"
-          name="Age"
-          placeholder="Enter Your Age"
-        />
-      </div>
-      >
-
-      <p class="results">Here are your results:</p>
-    </div>
-
-    <script src="app.js"></script>
+  
+  
+    <script src="index.js"></script>
   </body>
 </html>
